--- a/Traini8/startup/src/main/resources/application.properties
+++ b/Traini8/startup/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=startup
 
 # PostgreSQL Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/training_center_db
-spring.datasource.username=postgres
-spring.datasource.password=868710
+spring.datasource.username=YOUR_USERNAME
+spring.datasource.password=YOUR_PASSWORD
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
